# budgie-desktop-branding

./: LICENSE.CC-BY-SA-3.0  README.md  meson.build  meson_options.txt
icons/: meson.build
schemas/: meson.build
schemas/SLE/: com.solus-project.budgie-menu.gschema.override  com.solus-project.budgie-panel.gschema.override  com.solus-project.icon-tasklist.gschema.override  meson.build  org.gnome.desktop.background.gschema.override  org.gnome.desktop.screensaver.gschema.override  org.gnome.desktop.wm.preferences.gschema.override
schemas/budgie/: com.solus-project.budgie-menu.gschema.override  com.solus-project.icon-tasklist.gschema.override  meson.build
schemas/gnome/: meson.build  org.gnome.desktop.background.gschema.override  org.gnome.desktop.interface.gschema.override  org.gnome.desktop.screensaver.gschema.override  org.gnome.desktop.wm.preferences.gschema.override
schemas/openSUSE/: com.solus-project.budgie-menu.gschema.override  com.solus-project.budgie-wm.override  meson.build  org.gnome.desktop.interface.gschema.override
schemas/upstream/: meson.build  org.gnome.desktop.background.gschema.override  org.gnome.desktop.interface.gschema.override  org.gnome.desktop.screensaver.gschema.override  org.gnome.desktop.wm.preferences.gschema.override
